...
            } label: {
                Image(systemName: "xmark.circle.fill")
                    .font(.title)
                    .foregroundColor(.primary)
                    .padding(.trailing, 16)
            }
            .accessibilityIdentifier("SettingsCloseButton")
        }
        .padding(.vertical, 10)
    }
    
    // MARK: - Main Settings Content
    private var settingsContent: some View {
...
                        } else {
                            Label(layout, systemImage: "gamecontroller").tag(layout)
                        }
                    }
                }
                .pickerStyle(.menu)
                .accessibilityIdentifier("ControllerPicker")
                .onChange(of: selectedController, initial: false) {
                    // update the controller layout
                    do {
                        try LayoutManager.shared.setCurrentLayout(to: selectedController)
                        showDPadStyle = LayoutManager.shared.hasDPad
                        leftJoystickDeadzone = LayoutManager.shared.getLeftJoystickDeadzone()
...
            Button(action: {
                newLayoutName = ""
                makingNewLayout.toggle()
            }) {
                Text("Create New Layout")
            }
            .accessibilityIdentifier("CreateNewLayoutButton")
            .alert("New Layout", isPresented: $makingNewLayout) {
                TextField("Layout Name", text: $newLayoutName)
                    .accessibilityIdentifier("Name")
                
                Button("OK", action: {
                    if newLayoutName != "" {
                        do {
                            guard !layoutManager.layoutExists(for: newLayoutName) else { throw LayoutError.duplicate }
...
                            selectedController = newLayoutName
                        } catch {
                            UIApplication.shared.alert(body: error.localizedDescription)
                        }
                    }
                })
                .accessibilityIdentifier("LayoutNameOK")
                Button("Cancel", role: .cancel) { }
            } message: {
                Text("What will the name of the layout be?")
            }
            // MARK: Share Layout
            if isCustomLayout {
...
            Button(action: {
                UserDefaults.standard.set(false, forKey: "finishedTutorial")
                UserDefaults.standard.set(true, forKey: "resetTips")
            }) {
                Text("View Tutorial")
            }
            .accessibilityIdentifier("ViewTutorial")
            
            // MARK: Removing All Data
            Button(action: {
                showDeletingAllDataAlert.toggle()
            }) {
                Text("Delete App Data")
...
