...
                                )
                        })
                        .background(Color.blue)
                        .cornerRadius(25)
                        .frame(minWidth: 250)
                        .disabled(bluetoothManager.paircodeNeeded && bluetoothManager.connectedDevice != nil)
                        .accessibilityIdentifier("ModifyLayoutView")
                    }
                    
                    // MARK: NavigationLink to macro recorder view
                    NavigationLink(destination: ControllerView(isEditor: false, isInMacroEditor: true)) {
                        Text("Record Macro")
                            .font(.system(size: 18))
...
                            Image(systemName: "gearshape.fill")
                                .resizable()
                                .frame(width: 30, height: 30)
                                .foregroundColor(.accentColor)
                                .padding()
                        }
                        .accessibilityIdentifier("SettingsGearButton")
                    }
                    Spacer()
                }
            }
            .navigationTitle("Controller")
            .navigationBarTitleDisplayMode(.inline)
...
